fix overlapping divs an lg screens

--- a/client/src/styles/pages/LandingPage.scss
+++ b/client/src/styles/pages/LandingPage.scss
@@ -97,6 +97,12 @@
     #brandlogo {
         width: 20%;
     }
+
+    #landing-page {
+        h2 {
+            margin: 0 50px;
+        }
+    }
 }
 
 @include xl {
@@ -106,8 +112,11 @@
         display: flex;
         justify-content: center;
     }
+
     #brandlogo {
         width: 10%;
     }
+
+    
     
 }
